<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HelpStuff">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/teal_700"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="21dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/String1"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="90dp"
                android:text="@string/String2"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:text="@string/String3"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="175dp"
                android:text="@string/String4"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="250dp"
                android:text="@string/String5"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#005E55"
                android:text="8"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn1"
                android:backgroundTint="#005E55"
                android:text="2"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn2"
                android:backgroundTint="#39FF14"
                android:text="7"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn3"
                android:backgroundTint="#005E55"
                android:text="3"
                android:textSize="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="335dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/String6"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:gravity="center">

            <Button

                android:id="@+id/btn5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#005E55"
                android:text="1"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn5"
                android:backgroundTint="#005E55"
                android:text="5"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn6"
                android:backgroundTint="#39FF14"
                android:text="7"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn7"
                android:backgroundTint="#0000FE"
                android:text="4"
                android:textSize="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="440dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/String7"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#39FF14"
                android:text="9"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn9"
                android:backgroundTint="#39FF14"
                android:text="4"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn10"
                android:backgroundTint="#39FF14"
                android:text="7"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btn11"
                android:backgroundTint="#39FF14"
                android:text="6"
                android:textSize="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="570dp"
                android:text="@string/String8"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="italic" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>